# Claude-Code-Manager

./: .env.example  ARCHITECTURE.md  CLAUDE.md  DATABASE.md  PROGRESS.md  README.md  TEST.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1042ddf2318a_add_tags_table.py  1b223e97e404_add_has_unread_to_tasks.py  2de220d479fd_add_composite_index_log_entries_task_id_.py  4236103a2c1c_add_starred_field_to_tasks.py  492f4274adbb_add_archived_field_to_tasks.py  69d5cf74de62_add_sort_order_and_tags_to_projects.py  6b3f8a1c2d9e_initial_schema.py  75caedb511e7_add_show_in_selector_to_projects.py  8194139ead96_add_context_window_usage_to_task.py  a1b2c3d4e5f6_add_git_config_to_projects.py  b2c3d4e5f6a7_add_global_settings.py  c4d7e2f9a0b1_loop_task_fields.py  e1f2a3b4c5d6_add_max_iterations_to_tasks.py
backend/: config.py  database.py  main.py
backend/api/: chat.py  projects.py  settings.py  system.py  tags.py  tasks.py
backend/models/: global_settings.py  log_entry.py  project.py  tag.py  task.py
backend/schemas/: global_settings.py  project.py  tag.py  task.py
backend/services/: backup_service.py  dispatcher.py  git_config.py  instance_manager.py  ralph_loop.py  stream_parser.py  task_queue.py  token_manager_service.py
backend/tests/: conftest.py  test_alembic_migrations.py  test_api_auth.py  test_api_chat_plan.py  test_api_instances.py  test_api_projects.py  test_api_projects_sort_tags.py  test_api_system.py  test_api_tasks.py  test_git_credentials.py  test_message_pipeline.py  (+10 more)
frontend/: index.html
scripts/: dev.sh  start_all.sh
(+24 files in other folders)
